--- a/_posts/2024-01-22-xsl.md
+++ b/_posts/2024-01-22-xsl.md
@@ -27,14 +27,13 @@ _Esquema general de XSL_
 {:.section}
 ## ¿Qué es XSLT?
 
-Lee el artículo [¿Qué es XSLT?](/posts/xslt)
+Lee el artículo [¿Qué es XSLT?](/posts/xslt/)
 
 {:.section}
 ## ¿Qué es XSL-FO?
 
-Lee el artículo [¿Qué es XSL-FO?](/posts/xslfo)
+Lee el artículo [¿Qué es XSL-FO?](/posts/xslfo/)
 
 ## Bibliografía
 
 - <https://es.wikipedia.org/wiki/Extensible_Stylesheet_Language>
-
