--- a/_posts/2024-02-13-xslfo.md
+++ b/_posts/2024-02-13-xslfo.md
@@ -1,6 +1,6 @@
 ---
 title: "¿Qué es XSL-FO?"
-date: 2024-01-21 9:00:00 +0100
+date: 2024-02-13 9:00:00 +0100
 categories: [Desarrollo de Aplicaciones Multiplataforma, Lenguajes de Marcas y Sistemas de Gestión de Información]
 tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistemas de gestión de información, administración de sistemas informáticos de red, desarrollo de aplicaciones web, dam, daw, asir, lmsgi, xml, teoría]
 img_path: /assets/img/xsl/
@@ -38,7 +38,7 @@ _Flujo de trabajo con XSL-FO_
 </fo:root>
 ```
 
-- Espacio de nombres: <http://www.w3.org/1999/XSL/Format>
+- Espacio de nombres: `http://www.w3.org/1999/XSL/Format`
 - Elemento raíz: `fo:root`
 - Organización visual del documento:
   - Modelos de página: "páginas maestras"
