primera version xpath

--- a/_posts/2024-01-23-xpath.md
+++ b/_posts/2024-01-23-xpath.md
@@ -6,6 +6,7 @@ tags: [desarrollo de aplicaciones multiplataforma, lenguajes de marcas y sistema
 img_path: /assets/img/xpath/
 ---
 
+{:.section}
 ## Introducción
 
 XPath es un estándar (diferente de XML) aprobado por el W3C, que permite navegar entre los elementos y atributos de un documento XML.
@@ -23,6 +24,7 @@ Existen varias versiones de XPath aprobadas por el W3C.
 ![Linea del tiempo de las versiones de XPath](xpathTimeline.png)
 _Linea del tiempo de las versiones de XPath_
 
+{:.section}
 ## Árbol del documento
 
 XPath considera un documento XML como un árbol de nodos. En Informática, un árbol es una estructura de datos que equivale a un árbol matemático. En Matemáticas un árbol es un caso particular de grafo. Los siguientes términos definidos en teoría de grafos se utilizan también en Informática y en XPath:
@@ -62,7 +64,7 @@ _Nodos descendientes_
 
 Los nodos ascendientes de un nodo son todos los nodos de los que un nodo es descendiente: el padre, el padre del padre, etc.
 
-![Nodos ascendientes](grafos-ascendientes.png){: width="400px"}
+![Nodos ascendientes](grafos-ascendientes.svg){: width="400px"}
 _Nodos ascendientes_
 
 <details class="card mb-2">
@@ -75,7 +77,8 @@ Leer <https://www.w3schools.com/xml/xml_dom.asp>.
   </div>
 </details>
 
-## Tipos de nodos
+{:.subsection}
+### Tipos de nodos
 
 Un documento XML puede representarse como un árbol dirigido, considerando por ejemplo los elementos como nodos y que un elemento es padre de los elementos que contiene. Pero en XPath no sólo los elementos son nodos, en realidad hay siete tipos de nodos:
 
@@ -115,11 +118,12 @@ Por ejemplo, el documento XML siguiente:
 
 Se puede representar mediante el siguiente grafo:
 
-![Árbol de documento XML](grafos-documento.png)
+![Árbol de documento XML](grafos-documento.svg)
 _Árbol de documento XML_
 
 Los nodos atributos y de texto no son como los nodos elemento. Por ejemplo, los nodos atributo y de texto no pueden tener descendientes. En realidad el nodo atributo ni siquiera se considera como hijo, sino como una etiqueta adosada al elemento. El texto contenido por una etiqueta sí que se considera hijo del elemento, aunque las expresiones XPath suelen trabajar con nodos elemento y para referirse a los atributos o al texto se utilizan notaciones especiales.
 
+{:.section}
 ## Sintaxis de la expresiones XPath
 
 Una expresión XPath es una cadena de texto que representa un recorrido en el árbol del documento. Las expresiones más simples se parecen a las rutas de los archivos en el explorador de Windows o en la shell de GNU/Linux.
@@ -137,6 +141,7 @@ Las expresiones XPath se pueden dividir en pasos de búsqueda. Cada paso de bús
 - predicado: restringe la selección del eje a que los nodos cumplan ciertas condiciones.
 - selección de nodos: de los nodos seleccionados por el eje y predicado, selecciona los elementos, el texto que contienen o ambos.
 
+{:.section}
 ## Sintaxis abreviada
 
 Veamos unos ejemplos de expresiones XPath de sintaxis abreviada y el resultado de su evaluación en el documento de ejemplo anterior:
@@ -162,7 +167,8 @@ Veamos unos ejemplos de expresiones XPath de sintaxis abreviada y el resultado d
 </biblioteca>
 ```
 
-## Eje (en inglés, axis)
+{:.subsection}
+### Eje (en inglés, axis)
 
 El eje nos permite seleccionar un subconjunto de nodos del documento y corresponde a recorridos en el árbol del documento. Los nodos elemento se indican mediante el nombre del elemento. Los nodos atributo se indican mediante @ y el nombre del atributo.
 
@@ -304,7 +310,8 @@ No devuelve nada porque `<libro>` no es descendiente de `<autor>`.
  año="1969"
 ```
 
-## Predicado (en inglés, predicate)
+{:.subsection}
+### Predicado (en inglés, predicate)
 
 El predicado se escribe entre corchetes, a continuación del eje. Si el eje ha seleccionado unos nodos, el predicado permite restringir esa selección a los que cumplan determinadas condiciones.
 
@@ -348,12 +355,14 @@ El predicado se escribe entre corchetes, a continuación del eje. Si el eje ha s
 `[condicion]`: selecciona los nodos que cumplen la condición.
 Los predicados permiten definir condiciones sobre los valores de los atributos. En las condiciones se pueden utilizar los operadores siguientes:
 
-operadores lógicos: `and`, `or`, `not()`
-operadores aritméticos: `+`, `-`, `*`, `div`, `mod`
-operadores de comparación: `=`, `!=`, `<`, `>`, `<=`, `>=`
+- operadores lógicos: `and`, `or`, `not()`
+- operadores aritméticos: `+`, `-`, `*`, `div`, `mod`
+- operadores de comparación: `=`, `!=`, `<`, `>`, `<=`, `>=`
+
 Las comparaciones se pueden hacer entre valores de nodos y atributos o con cadenas de texto o numéricas. Las cadenas de texto deben escribirse entre comillas simples o dobles. En el caso de las cadenas numéricas, las comillas son optativas.
 
 La condición puede utilizar el valor de un atributo (utilizando `@`) o el texto que contiene el elemento.
+
 En los ejemplos siguientes se obtienen respectivamente los elementos `<fechaPublicacion>` cuyo atributo año es posterior/mayor a 1970 y los elementos `<libro>` cuyo subelemento `<autor>` tiene como contenido "Mario Vargas Llosa":
 
 ```xpath
@@ -450,7 +459,8 @@ En el ejemplo siguiente se seleccionan los libros escritos por Mario Vargas Llos
 </libro>
 ```
 
-## Selección de nodos (en inglés, node test)
+{:.subsection}
+### Selección de nodos (en inglés, node test)
 
 La selección de nodos se escribe a continuación del eje y el predicado. Si el eje y el predicado han seleccionado unos nodos, la selección de nodos indica con qué parte de esos nodos nos quedamos.
 
@@ -635,7 +645,8 @@ No devuelve nada porque `<libro>` no tiene atributos.
 > En XPath 1.0 no se puede seleccionar únicamente el valor del atributo, sino que se obtienen respuestas del tipo nombreDelAtributo=ValorDelAtributo
 {:.prompt-info}
 
-## Pasos de búsqueda consecutivos
+{:.subsection}
+### Pasos de búsqueda consecutivos
 
 Una expresión XPath puede contener varios pasos de búsqueda consecutivos. Cada uno incluirá su eje (y en su caso, su predicado) y el último paso de búsqueda incluirá en su caso una selección de nodos. Cada paso de búsqueda trabaja a partir de los nodos seleccionados por el paso de búsqueda anterior.
 
@@ -728,7 +739,8 @@ En los ejemplos siguientes se obtiene el autor que ha publicado libros en 1969 d
 <autor fechaNacimiento="28/03/1936">Mario Vargas Llosa</autor>
 ```
 
-## Expresiones anidadas
+{:.subsection}
+### Expresiones anidadas
 
 Las expresiones XPath pueden anidarse, lo que permite definir expresiones más complicadas. Por ejemplo, en el documento utilizado anteriormente:
 
