--- a/_posts/2024-02-12-xslt.md
+++ b/_posts/2024-02-12-xslt.md
@@ -59,6 +59,8 @@ El procesador que vamos a usar un procesador XSL gratuito y de código abierto l
 
 Si quieres saber como instalar Saxon-HE puedes leer el apartado [Instalación de Saxon-HE del artículo Transformación de datos con XML y XSL para su reutilización](https://programminghistorian.org/es/lecciones/transformacion-datos-xml-xsl#instalaci%C3%B3n-de-saxon-he).
 
+También se puede usar XML Copy Editor como se puede ver en el apartado "Aplicar una transformación XSLT" del artículo [XML Copy Editor](https://www.mclibre.org/consultar/xml/otros/xmlcopyeditor.html).
+
 {:.section}
 ## Hojas de estilo XSLT
 
@@ -1041,3 +1043,4 @@ Como en ejemplos anteriores, para que la imagen se muestre en el navegador serí
 - <https://www.data2type.de/es/xml-xslt-xslfo/xslt/referencia-xslt1#xsl%3Atemplate>
 - <https://www.w3schools.com/xml/xsl_intro.asp>
 - <https://www.w3schools.com/xml/xml_xslt.asp>
+- <https://www.mclibre.org/consultar/xml/otros/xmlcopyeditor.html>
