--- a/_posts/2024-01-23-xpath.md
+++ b/_posts/2024-01-23-xpath.md
@@ -170,7 +170,7 @@ Veamos unos ejemplos de expresiones XPath de sintaxis abreviada y el resultado d
 {:.subsection}
 ### Eje (en inglés, axis)
 
-El eje nos permite seleccionar un subconjunto de nodos del documento y corresponde a recorridos en el árbol del documento. Los nodos elemento se indican mediante el nombre del elemento. Los nodos atributo se indican mediante @ y el nombre del atributo.
+El eje nos permite seleccionar un subconjunto de nodos del documento y corresponde a recorridos en el árbol del documento. Los nodos elemento se indican mediante el nombre del elemento. Los nodos atributo se indican mediante `@` y el nombre del atributo.
 
 `/`: si está al principio de la expresión, indica el nodo raíz, si no, indica "hijo". Debe ir seguida del nombre de un elemento.
 
@@ -209,9 +209,9 @@ No devuelve nada porque `<autor>` no es hijo de `<biblioteca>`.
 /biblioteca/libro/@fechaNacimiento
 ```
 
-No devuelve nada porque `<libro>` no tiene el atributo fechaNacimiento.
+No devuelve nada porque `<libro>` no tiene el atributo `fechaNacimiento`.
 
-> En XPath 1.0 no se puede seleccionar únicamente el valor del atributo, sino que se obtienen respuestas del tipo nombreDelAtributo=ValorDelAtributo
+> En XPath 1.0 no se puede seleccionar únicamente el valor del atributo, sino que se obtienen respuestas del tipo `nombreDelAtributo=ValorDelAtributo`
 {:.prompt-info}
 
 `//`: indica "descendiente" (hijos, hijos de hijos, etc.).
@@ -250,7 +250,7 @@ No devuelve nada porque `<libro>` no es descendiente de `<autor>`.
 /..: indica el elemento padre.
 ```
 
-> En el resultado de los ejemplos siguientes se obtienen únicamente los nodos que tienen el atributo fechaNacimiento.
+> En el resultado de los ejemplos siguientes se obtienen únicamente los nodos que tienen el atributo `fechaNacimiento`.
 {:.prompt-info}
 
 ```xpath
@@ -353,6 +353,7 @@ El predicado se escribe entre corchetes, a continuación del eje. Si el eje ha s
 ```
 
 `[condicion]`: selecciona los nodos que cumplen la condición.
+
 Los predicados permiten definir condiciones sobre los valores de los atributos. En las condiciones se pueden utilizar los operadores siguientes:
 
 - operadores lógicos: `and`, `or`, `not()`
@@ -642,7 +643,7 @@ No devuelve nada porque `<libro>` no tiene atributos.
  fechaNacimiento="28/03/1936"
 ```
 
-> En XPath 1.0 no se puede seleccionar únicamente el valor del atributo, sino que se obtienen respuestas del tipo nombreDelAtributo=ValorDelAtributo
+> En XPath 1.0 no se puede seleccionar únicamente el valor del atributo, sino que se obtienen respuestas del tipo `nombreDelAtributo=ValorDelAtributo`
 {:.prompt-info}
 
 {:.subsection}
