--- a/_posts/2024-01-22-xsl.md
+++ b/_posts/2024-01-22-xsl.md
@@ -34,6 +34,11 @@ Lee el artículo [¿Qué es XSLT?](/posts/xslt/)
 
 Lee el artículo [¿Qué es XSL-FO?](/posts/xslfo/)
 
+{:.section}
+## ¿Qué es XPath?
+
+Lee el artículo [¿Qué es XPath?](/posts/xpath/)
+
 ## Bibliografía
 
 - <https://es.wikipedia.org/wiki/Extensible_Stylesheet_Language>
