--- a/_posts/2024-01-23-xpath.md
+++ b/_posts/2024-01-23-xpath.md
@@ -244,11 +244,15 @@ No devuelve nada porque `<libro>` no es descendiente de `<autor>`.
 
 ```xpath
 //@año
+```
+
+```plaintext
  año="1973"
  año="1973"
  año="1969"
-/..: indica el elemento padre.
 ```
+
+`/..`: indica el elemento padre.
 
 > En el resultado de los ejemplos siguientes se obtienen únicamente los nodos que tienen el atributo `fechaNacimiento`.
 {:.prompt-info}
@@ -654,7 +658,7 @@ Una expresión XPath puede contener varios pasos de búsqueda consecutivos. Cada
 En el ejemplo siguiente se obtienen los títulos de los libros publicados después de 1970, mediante dos pasos de búsqueda:
 
 en el primer paso (`//fechaPublicacion[@año>1970]`) se seleccionan los elementos `<fechaPublicacion>` cuyo atributo año es superior a 1970.
-en el segundo paso (`/../titulo`), se seleccionan primero los elementos padre (/..) de los `<fechaPublicacion>` seleccionados en el primer paso de búsqueda (es decir, elementos `<libro>`) y a continuación sus subelementos `<titulo>`.
+en el segundo paso (`/../titulo`), se seleccionan primero los elementos padre (`/..`) de los `<fechaPublicacion>` seleccionados en el primer paso de búsqueda (es decir, elementos `<libro>`) y a continuación sus subelementos `<titulo>`.
 
 ```xpath
 //fechaPublicacion[@año>1970]/../titulo
